--- a/confidence_main-report.qmd
+++ b/confidence_main-report.qmd
@@ -296,6 +296,9 @@ summary(glmer_h7_interaction_mock)
 judgments are more accurate, to a greater extent for lie judgments than truth
 judgments, specifically for receivers who tend to be more accurate.*
 
+There is no evidence that more capable receivers have better confidence-accuracy
+calibration.
+
 ```{r}
 lrt_h8
 ```
